deployment/openshift-play-scala-grpc-example.yml
---
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: "play-scala-grpc-example-v1-0-snapshot"
  labels:
    appName: "play-scala-grpc-example"
    appNameVersion: "play-scala-grpc-example-v1-0-snapshot"
spec:
  replicas: 2
  selector:
    matchLabels:
      appNameVersion: "play-scala-grpc-example-v1-0-snapshot"
  template:
    metadata:
      labels:
        appName: "play-scala-grpc-example"
        appNameVersion: "play-scala-grpc-example-v1-0-snapshot"
    spec:
      restartPolicy: Always
      containers:
        - name: "play-scala-grpc-example"
          image: "docker-registry-default.centralpark.lightbend.com/play-scala-grpc-example/play-scala-grpc-example:1.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 9443
              name: https
          volumeMounts: []
          command:
            - "/opt/docker/bin/play-scala-grpc-example"
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: "play-scala-grpc-example"
  name: "play-scala-grpc-example"
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
    - name: https
      port: 9443
      protocol: TCP
  selector:
    appName: "play-scala-grpc-example"
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    appName: play-scala-grpc-example
  name: play-scala-grpc-route
  namespace: play-scala-grpc-example
  selfLink: >-
    /apis/route.openshift.io/v1/namespaces/play-scala-grpc-example/routes/play-scala-grpc-route
spec:
  host: myservice.example.org
  port:
    targetPort: http
  to:
    kind: Service
    name: play-scala-grpc-example
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: myservice.example.org
    routerName: router
